# licensegen

./: .gitignore  Cargo.toml  LICENSE  README.md  licensegen.yml
database/: 00_create_database.sql  01_rebuild_tables.sql  02_rebuild_views.sql
database/schema/: 01_zipcodes.sql  02_addresses.sql  02_populate_zipcodes.sql  03_address.sql  03_addresses.sql  03_customers.sql  04_customers.sql  04_products.sql  05_editions.sql  06_applications.sql  07_licenses.sql  08_products.sql
database/tables/: 02_populate_zipcodes.sql  03_address.sql  04_customers.sql  05_editions.sql
database/views/: 001_v_address.sql  002_v_customers.sql  003_v_editions.sql  004_v_applications.sql  005_v_licenses.sql
src/: config.rs  lib.rs  logger_init.rs  main.rs
src/config/: config.rs  loader.rs  mod.rs  resolver.rs
src/db/: mod.rs  pool.rs  reader.rs  types.rs  writer.rs
src/license/: crypto.rs  db_writer.rs  errors.rs  evaluator.rs  evaluator_error.rs  generator.rs  loader.rs  mod.rs  payload.rs  signer.rs  types.rs  validator.rs  writer.rs
src/product/: db_model.rs  edition.rs  ingest.rs  keypairs.rs  loader.rs  mod.rs  product.rs  request.rs  sync.rs  types.rs  yaml.rs
src/signing/: keygen.rs  loaders.rs  mod.rs  payload.rs  resolver.rs  signer.rs  types.rs
src/util/: datetime.rs  helpers.rs  mod.rs
src/vault/: ansible.rs  decryptor.rs  loader.rs  mod.rs  reader.rs  types.rs
tests/: test_validator.rs
