[package]
name = "licensegen"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4"
logger = { path = "../logger" }   # or your actual relative path
aes = "0.8"
cbc = "0.1"
ctr = "0.9"
cipher = { version = "0.4", features = ["block-padding"] }
hex = "0.4"
hmac = "0.12"
pbkdf2 = "0.12"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"]}
serde_yaml = "0.9"
serde_json = "1.0"
rsa = { version = "=0.9.6", features = ["pem", "serde"] }
pkcs1 = "0.7"
base64 = "0.21"
rand = "0.8"
thiserror = "1"
sqlx = { version = "0.7", features = ["runtime-tokio", "mysql", "macros"] }
tokio = { version = "1", features = ["full"] }
