[package]
name = "licensegen"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = "0.8"
anyhow = "1"
base64 = "0.21"
cbc = "0.1"
chrono = { version = "0.4", features = ["serde"] }
cipher = { version = "0.4", features = ["block-padding"] }
ctr = "0.9"
hex = "0.4"
hmac = "0.12"
log = "0.4"
logger = { path = "../logger" }   # or your actual relative path
mysql_common = "0.32"
mysql_async = "0.34"
pbkdf2 = "0.12"
pkcs1 = "0.7"
rand = "0.8"
rsa = { version = "=0.9.6", features = ["pem", "serde"] }
serde = { version = "1.0", features = ["derive"]}
serde_yaml = "0.9"
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
